<resources>
    <string name="app_name">Currency-Converter</string>
    <string name="currency_converter">Currency Converter</string>
    <string name="convert">Convert</string>
    <string name="dot">.</string>
    <string name="afn">AFN</string>
    <string name="refresh">refresh</string>
    <string name="converter">Converter</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="amount">Amount</string>
    <string name="result">Result</string>
    <string name="converted_amount">Converted Amount</string>
    <string name="to_currency">To_Currency</string>
    <string name="from_currency">From_Currency</string>
</resources>